// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils calculateSMA should return okay numbers 1`] = `
Array [
  1.8,
  2.2,
  3,
  3.8,
  4.2,
]
`;

exports[`utils calculateSMA should return okay numbers 2`] = `
Array [
  1,
  1,
  2,
  3,
  3,
  4,
  5,
  5,
]
`;

exports[`utils calculateSMA should return okay numbers 3`] = `
Array [
  1.5,
  2,
  2.5,
  3.5,
  4,
  4.5,
]
`;

exports[`utils calculateSMA should return okay numbers 4`] = `
Array [
  1,
  3,
  5,
  7,
  9,
]
`;

exports[`utils calculateSMA should return okay numbers 5`] = `
Array [
  1.5,
  4.5,
  7.5,
]
`;

exports[`utils calculateSMA should return okay numbers 6`] = `
Array [
  1,
  5,
  9,
]
`;

exports[`utils calculateSMA should return okay numbers 7`] = `
Array [
  1,
  3,
  5,
  7,
  9,
]
`;

exports[`utils calculateSMA should return okay numbers 8`] = `
Array [
  1.5,
  4.5,
  7.5,
]
`;

exports[`utils calculateSMA should return okay numbers 9`] = `
Array [
  2,
  6,
]
`;
